Switched to full-height modal - fixes blurry text issue and long text overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -308,46 +308,29 @@ p {
 }
 
 .modal-pane {
-  max-height: 100%;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  background-color: #fefefe;
   overflow-y: auto;
-}
 
-.close-modal-button {
-  margin-top: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 700px) {
   .modal-pane {
     position: absolute;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
-    background-color: #fefefe;
-    max-width: 700px;
-    width: 100%;
-  }
-
-  .description-list {
-    height: 200px;
+    transform: translateX(-50%);
+    width: 700px;
   }
 }
 
 @media (max-width: 699px) {
   .modal-pane {
-    position: absolute;
-    top: 0px;
     left: 0px;
-    bottom: 0px;
     right: 0px;
-    background-color: #fefefe;
-
-    display: flex;
-    flex-direction: column;
-  }
-
-  .modal-content {
-    flex: 1;
   }
 }
 
@@ -356,20 +339,16 @@ p {
   flex-direction: column;
   align-items: center;
   padding: 15px;
+  flex: 1 0 auto;
 }
 
 .description-list {
-  position: relative;
   width: 100%;
+  flex: 1 0 auto;
 }
 
-.description-list p {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  right: 0px;
-  transition: all 0.25s;
+.close-modal-button {
+  margin-top: 20px;
 }
 
 .Wallop-button {
